[package]
name = "kvm-ioctls"
version = "0.4.0"
authors = ["Amazon Firecracker Team <firecracker-maintainers@amazon.com>"]
description = "Safe wrappers over KVM ioctls"
repository = "https://github.com/rust-vmm/kvm-ioctls"
readme = "README.md"
keywords = ["kvm"]
license = "Apache-2.0 OR MIT"

[dependencies]
libc = ">=0.2.39"

[dependencies.kvm-bindings]
git = "https://github.com/bjzhjing/kvm-bindings"
branch = "serde_strict_v1"
features = ["with-serde", "fam-wrappers"]

[dependencies.vmm-sys-util]
git = "https://github.com/aghecenco/vmm-sys-util"
branch = "serde"
features = ["with-serde"]

[dev-dependencies]
byteorder = ">=1.2.1"
